--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
-                        <p>info@medobr.com</p>
+                        <p>dentistge@gmail.com</p>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
-                        <p>+995 XXX XXX XXX</p>
+                        <p>+995 599 510 741</p>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
