--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         </div>
     </section>
 
+    <!-- Добавьте эту кнопку в навигационное меню -->
+    <li><a href="dentaltour.html">Стоматологический туризм</a></li>
+
+
     <!-- О проекте -->
     <section id="about" class="about">
         <div class="container">
