--- a/dentaltour.html
+++ b/dentaltour.html
@@ -491,9 +491,9 @@
                 </div>
                 <div class="footer-contact">
                     <h4>Контакты</h4>
-                    <p><i class="fas fa-phone"></i> +995 XXX XXX XXX</p>
-                    <p><i class="fas fa-envelope"></i> info@dental-georgia.com</p>
-                    <p><i class="fas fa-map-marker-alt"></i> Тбилиси, ул. Шота Руставели, 42</p>
+                    <p><i class="fas fa-phone"></i> +995 599 510 741</p>
+                    <p><i class="fas fa-envelope"></i> dentistge@gmail.com</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Тбилиси, ул. Коте Марджанишвили, 30</p>
                 </div>
             </div>
             <div class="footer-bottom">
