--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
     <!-- Добавьте эту кнопку в навигационное меню -->
     <li><a href="dentaltour.html">Стоматологический туризм</a></li>
 
+    <!-- Кнопка для перехода на страницу молекулярной анимации -->
+        <div class="cta-button">
+            <a href="https://zmeik.github.io/MedEd/molecular_animation" class="btn btn-primary">
+                <i class="fas fa-atom"></i> Молекулярная анимация
+            </a>
+        </div>
+
 
     <!-- О проекте -->
     <section id="about" class="about">
