--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a href="#features">Возможности</a></li>
                     <li><a href="#how-it-works">Как это работает</a></li>
                     <li><a href="#contact">Контакты</a></li>
+                    <li><a href="dentaltour.html">Стоматологический туризм</a></li> <!-- Переместил сюда -->
                 </ul>
             </nav>
         </div>
@@ -36,16 +37,12 @@
         </div>
     </section>
 
-    <!-- Добавьте эту кнопку в навигационное меню -->
-    <li><a href="dentaltour.html">Стоматологический туризм</a></li>
-
     <!-- Кнопка для перехода на страницу молекулярной анимации -->
-        <div class="cta-button">
-            <a href="https://zmeik.github.io/MedEd/molecular_animation.php" class="btn btn-primary">
-                <i class="fas fa-atom"></i> Молекулярная анимация
-            </a>
-        </div>
-
+    <div class="cta-button">
+        <a href="https://zmeik.github.io/MedEd/molecular_animation.php" class="btn btn-primary">
+            <i class="fas fa-atom"></i> Молекулярная анимация
+        </a>
+    </div>
 
     <!-- О проекте -->
     <section id="about" class="about">
