--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- Кнопка для перехода на страницу молекулярной анимации -->
     <div class="cta-button">
-        <a href="https://zmeik.github.io/MedEd/molecular_animation.html" class="btn btn-primary">
+        <a href="molecular_animation.html" class="btn btn-primary">
             <i class="fas fa-atom"></i> Молекулярная анимация
         </a>
     </div>
