--- a/molecular_animation.html
+++ b/molecular_animation.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="index.html#about">О проекте</a></li>
-                    <li><a href="molecular-animation.html">Молекулярная анимация</a></li>
+                    <li><a href="molecular_animation.html">Молекулярная анимация</a></li>
                 </ul>
             </nav>
         </div>
