--- a/dentaltour.html
+++ b/dentaltour.html
@@ -3,158 +3,241 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Премиальная стоматология в Грузии - современные технологии и европейский сервис по доступным ценам">
+    <meta name="keywords" content="стоматология, Грузия, имплантация, лечение зубов, стоматологический туризм">
+    <meta property="og:title" content="Dental Georgia | Премиальная стоматология в Грузии">
+    <meta property="og:description" content="Современные технологии и европейский сервис по доступным ценам">
+    <meta property="og:image" content="/images/og-image.jpg">
+    <meta property="og:url" content="https://dentist.ge">
+
     <title>Dental Georgia | Премиальная стоматология в Грузии</title>
 
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+    <!-- Preload критических ресурсов -->
+    <link rel="preload" href="/fonts/SpaceGrotesk-Medium.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/css/critical.css" as="style">
+
     <!-- Шрифты -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <!-- GSAP для анимаций -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <!-- Стили -->
+    <link rel="stylesheet" href="/css/main.css">
 
-    <!-- Locomotive Scroll для плавного скролла -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
-
-    <link rel="stylesheet" href="style.css">
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Dentist",
+      "name": "Dental Georgia",
+      "image": "/images/clinic.jpg",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "ул. Коте Марджанишвили, 30",
+        "addressLocality": "Тбилиси",
+        "addressCountry": "GE"
+      },
+      "telephone": "+995 599 510 741",
+      "email": "dentistge@gmail.com"
+    }
+    </script>
 </head>
 <body>
-    <!-- Навигация -->
-    <nav class="nav-container">
-        <div class="nav-content">
-            <div class="logo">
-                <svg><!-- Ваш SVG логотип --></svg>
-            </div>
-            <div class="nav-links">
-                <a href="#services" class="nav-link">Услуги</a>
-                <a href="#process" class="nav-link">Процесс</a>
-                <a href="#prices" class="nav-link">Цены</a>
-                <a href="#contact" class="nav-button">Связаться</a>
-            </div>
-            <div class="nav-mobile">
-                <div class="menu-icon">
-                    <span></span>
-                    <span></span>
-                </div>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Главный экран -->
-    <section class="hero">
-        <div class="hero-content">
-            <h1 class="gradient-text">Премиальная стоматология в Грузии</h1>
-            <p class="hero-subtitle">Современные технологии и европейский сервис по доступным ценам</p>
-            <div class="hero-cta">
-                <a href="#contact" class="primary-button">
-                    <span>Получить консультацию</span>
-                    <svg><!-- Иконка стрелки --></svg>
+    <!-- Header -->
+    <header class="header" role="banner">
+        <nav class="nav-container" role="navigation" aria-label="Главное меню">
+            <div class="nav-content">
+                <a href="/" class="logo" aria-label="Dental Georgia">
+                    <img src="/images/logo.svg" alt="Логотип Dental Georgia" width="150" height="40">
                 </a>
-            </div>
-        </div>
-        <div class="hero-features">
-            <div class="feature-card">
-                <span class="feature-number">60%</span>
-                <p>экономия на лечении</p>
-            </div>
-            <div class="feature-card">
-                <span class="feature-number">15+</span>
-                <p>лет опыта</p>
-            </div>
-            <div class="feature-card">
-                <span class="feature-number">5000+</span>
-                <p>довольных клиентов</p>
-            </div>
-        </div>
-    </section>
 
-    <!-- Горизонтальный скролл услуг -->
-    <section class="services-horizontal" data-scroll-section>
-        <div class="services-container">
-            <div class="service-item">
-                <div class="service-image">
-                    <img src="implants.jpg" alt="Имплантация">
-                </div>
-                <h3>Имплантация</h3>
-                <p>Премиальные импланты от ведущих производителей</p>
-                <a href="#" class="service-link">
-                    <span>Подробнее</span>
-                    <svg><!-- Иконка --></svg>
-                </a>
-            </div>
-            <!-- Другие услуги -->
-        </div>
-    </section>
+                <button class="nav-toggle" aria-label="Открыть меню" aria-expanded="false">
+                    <span class="hamburger"></span>
+                </button>
 
-    <!-- Процесс работы -->
-    <section class="process-section" data-scroll-section>
-        <div class="process-steps">
-            <div class="step" data-scroll data-scroll-speed="2">
-                <div class="step-number">01</div>
-                <h3>Онлайн консультация</h3>
-                <p>Детальное обсуждение вашего случая и составление предварительного плана</p>
-            </div>
-            <!-- Другие шаги -->
-        </div>
-    </section>
+                <div class="nav-menu">
+                    <ul class="nav-links">
+                        <li><a href="#services" class="nav-link">Услуги</a></li>
+                        <li><a href="#prices" class="nav-link">Цены</a></li>
+                        <li><a href="#about" class="nav-link">О нас</a></li>
+                        <li><a href="#contact" class="nav-button">Связаться</a></li>
+                    </ul>
 
-    <!-- Интерактивный прайс -->
-    <section class="prices-section" data-scroll-section>
-        <div class="price-calculator">
-            <div class="calculator-options">
-                <!-- Интерактивные опции выбора услуг -->
-            </div>
-            <div class="price-comparison">
-                <div class="price-card europe">
-                    <h4>Цена в Европе</h4>
-                    <span class="price">€2000</span>
-                </div>
-                <div class="price-card georgia active">
-                    <h4>Цена в Грузии</h4>
-                    <span class="price">€800</span>
-                    <span class="savings">-60%</span>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Форма обратной связи -->
-    <section class="contact-section" data-scroll-section>
-        <div class="contact-container">
-            <div class="contact-content">
-                <h2>Начните путь к здоровой улыбке</h2>
-                <form class="contact-form">
-                    <div class="form-group">
-                        <input type="text" required>
-                        <label>Ваше имя</label>
+                    <div class="nav-contact">
+                        <a href="tel:+995599510741" class="contact-link">
+                            <svg aria-hidden="true" class="icon"><!-- Phone icon --></svg>
+                            +995 599 510 741
+                        </a>
                     </div>
-                    <div class="form-group">
-                        <input type="tel" required>
-                        <label>Телефон</label>
-                    </div>
-                    <button type="submit" class="submit-button">
-                        <span>Отправить</span>
-                        <svg><!-- Иконка --></svg>
-                    </button>
-                </form>
+                </div>
             </div>
-            <div class="contact-info">
-                <div class="info-item">
-                    <svg><!-- Иконка локации --></svg>
-                    <p>Тбилиси, ул. Коте Марджанишвили, 30</p>
+        </nav>
+    </header>
+
+    <main role="main">
+        <!-- Hero Section -->
+        <section class="hero" aria-labelledby="hero-title">
+            <div class="container">
+                <div class="hero-content">
+                    <h1 id="hero-title" class="gradient-text">Премиальная стоматология в Грузии</h1>
+                    <p class="hero-subtitle">Современные технологии и европейский сервис по доступным ценам</p>
+                    <div class="hero-cta">
+                        <a href="#contact" class="button button-primary">
+                            Получить консультацию
+                            <svg aria-hidden="true" class="icon"><!-- Arrow icon --></svg>
+                        </a>
+                    </div>
                 </div>
-                <div class="info-item">
-                    <svg><!-- Иконка телефона --></svg>
-                    <p>+995 599 510 741</p>
+
+                <div class="hero-features">
+                    <div class="feature-card" data-aos="fade-up">
+                        <span class="feature-number">60%</span>
+                        <p>экономия на лечении</p>
+                    </div>
+                    <div class="feature-card" data-aos="fade-up" data-aos-delay="100">
+                        <span class="feature-number">15+</span>
+                        <p>лет опыта</p>
+                    </div>
+                    <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
+                        <span class="feature-number">5000+</span>
+                        <p>довольных клиентов</p>
+                    </div>
                 </div>
-                <div class="info-item">
-                    <svg><!-- Иконка email --></svg>
-                    <p>dentistge@gmail.com</p>
+            </div>
+        </section>
+
+        <!-- Services Section -->
+        <section id="services" class="services" aria-labelledby="services-title">
+            <div class="container">
+                <h2 id="services-title" class="section-title">Наши услуги</h2>
+                <div class="services-grid">
+                    <article class="service-card" data-aos="fade-up">
+                        <div class="service-image">
+                            <img src="/images/implants.jpg" alt="Имплантация зубов" loading="lazy">
+                        </div>
+                        <h3>Имплантация</h3>
+                        <p>Установка премиальных имплантов от ведущих производителей</p>
+                        <a href="#contact" class="button button-secondary">Узнать больше</a>
+                    </article>
+                    <!-- Другие карточки услуг -->
+                </div>
+            </div>
+        </section>
+
+        <!-- Prices Section -->
+        <section id="prices" class="prices" aria-labelledby="prices-title">
+            <div class="container">
+                <h2 id="prices-title" class="section-title">Цены на услуги</h2>
+                <div class="price-calculator">
+                    <div class="price-tabs" role="tablist">
+                        <button role="tab" aria-selected="true" aria-controls="panel-1">
+                            Имплантация
+                        </button>
+                        <button role="tab" aria-selected="false" aria-controls="panel-2">
+                            Протезирование
+                        </button>
+                    </div>
+
+                    <div id="panel-1" role="tabpanel" class="price-panel active">
+                        <!-- Содержимое панели -->
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact" class="contact" aria-labelledby="contact-title">
+            <div class="container">
+                <h2 id="contact-title" class="section-title">Свяжитесь с нами</h2>
+                <div class="contact-grid">
+                    <div class="contact-form-wrapper">
+                        <form class="contact-form" novalidate>
+                            <div class="form-group">
+                                <label for="name">Ваше имя</label>
+                                <input type="text" id="name" name="name" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="phone">Телефон</label>
+                                <input type="tel" id="phone" name="phone" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Сообщение</label>
+                                <textarea id="message" name="message"></textarea>
+                            </div>
+                            <button type="submit" class="button button-primary">
+                                Отправить
+                            </button>
+                        </form>
+                    </div>
+
+                    <div class="contact-info">
+                        <div class="info-card">
+                            <svg aria-hidden="true" class="icon"><!-- Location icon --></svg>
+                            <h3>Адрес</h3>
+                            <p>Тбилиси, ул. Коте Марджанишвили, 30</p>
+                        </div>
+                        <div class="info-card">
+                            <svg aria-hidden="true" class="icon"><!-- Phone icon --></svg>
+                            <h3>Телефон</h3>
+                            <p>+995 599 510 741</p>
+                        </div>
+                        <div class="info-card">
+                            <svg aria-hidden="true" class="icon"><!-- Email icon --></svg>
+                            <h3>Email</h3>
+                            <p>dentistge@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer" role="contentinfo">
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-brand">
+                    <img src="/images/logo.svg" alt="Dental Georgia" width="120" height="32">
+                    <p>Ваша улыбка - наша забота</p>
+                </div>
+
+                <nav class="footer-nav">
+                    <h3>Навигация</h3>
+                    <ul>
+                        <li><a href="#services">Услуги</a></li>
+                        <li><a href="#prices">Цены</a></li>
+                        <li><a href="#about">О нас</a></li>
+                        <li><a href="#contact">Контакты</a></li>
+                    </ul>
+                </nav>
+
+                <div class="footer-contact">
+                    <h3>Контакты</h3>
+                    <address>
+                        <p>Тбилиси, ул. Коте Марджанишвили, 30</p>
+                        <p>+995 599 510 741</p>
+                        <p>dentistge@gmail.com</p>
+                    </address>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <p>&copy; 2024 Dental Georgia. Все права защищены.</p>
+                <div class="footer-links">
+                    <a href="/privacy">Политика конфиденциальности</a>
+                    <a href="/terms">Условия использования</a>
                 </div>
             </div>
         </div>
-    </section>
+    </footer>
+
+    <!-- Cookie Consent -->
+    <div class="cookie-consent" role="alert" aria-live="polite">
+        <p>Мы используем файлы cookie для улучшения вашего опыта.</p>
+        <button class="button button-secondary accept-cookies">Принять</button>
+    </div>
+
+    <!-- Scripts -->
+    <script src="/js/main.js" defer></script>
 </body>
 </html>
