--- a/dentaltour.html
+++ b/dentaltour.html
@@ -23,7 +23,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
 
     <!-- Стили -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/dentaltour.css">
 </head>
 <body>
     <!-- Header -->
@@ -184,6 +184,6 @@
     </div>
 
     <!-- Scripts -->
-    <script src="/js/main.js"></script>
+    <script src="/js/dentaltour.js"></script>
 </body>
 </html>
