--- a/dentaltour.html
+++ b/dentaltour.html
@@ -17,13 +17,13 @@
 
     <!-- Preload критических ресурсов -->
     <link rel="preload" href="/fonts/SpaceGrotesk-Medium.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/css/main.css" as="style">
+    <link rel="preload" href="/dentaltour.css" as="style">
 
     <!-- Шрифты -->
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
 
     <!-- Стили -->
-    <link rel="stylesheet" href="/css/dentaltour.css">
+    <link rel="stylesheet" href="/dentaltour.css">
 </head>
 <body>
     <!-- Header -->
@@ -31,7 +31,7 @@
         <nav class="nav-container">
             <div class="container nav-content">
                 <a href="/" class="logo">
-                    <img src="/images/logo.svg" alt="Dentist GE" width="150">
+                    <img src="/images/ID_white.png" alt="Dentist GE" width="150">
                 </a>
                 <button class="nav-toggle" aria-label="Открыть меню" aria-expanded="false">
                     <span class="hamburger"></span>
@@ -184,6 +184,6 @@
     </div>
 
     <!-- Scripts -->
-    <script src="/js/dentaltour.js"></script>
+    <script src="/dentaltour.js"></script>
 </body>
 </html>
