--- a/dentaltour.html
+++ b/dentaltour.html
@@ -17,13 +17,13 @@
 
     <!-- Preload критических ресурсов -->
     <link rel="preload" href="/fonts/SpaceGrotesk-Medium.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/dentaltour.css" as="style">
+    <link rel="preload" href="https://zmeik.github.io/MedEd/dentaltour.css" as="style">
 
     <!-- Шрифты -->
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
 
     <!-- Стили -->
-    <link rel="stylesheet" href="/dentaltour.css">
+    <link rel="stylesheet" href="https://zmeik.github.io/MedEd/dentaltour.css">
 </head>
 <body>
     <!-- Header -->
@@ -148,7 +148,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <img src="/images/logo.svg" alt="Dentist GE" width="120">
+                    <img src="/images/ID_white.png" alt="Dentist GE" width="120">
                     <p>Ваша улыбка - наша забота</p>
                 </div>
                 <div class="footer-links">
@@ -184,6 +184,6 @@
     </div>
 
     <!-- Scripts -->
-    <script src="/dentaltour.js"></script>
+    <script src="https://zmeik.github.io/MedEd/dentaltour.js"></script>
 </body>
 </html>
