--- a/dentaltour.html
+++ b/dentaltour.html
@@ -31,7 +31,7 @@
         <nav class="nav-container">
             <div class="container nav-content">
                 <a href="/" class="logo">
-                    <img src="/images/ID_white.png" alt="Dentist GE" width="150">
+                    <img src="https://zmeik.github.io/MedEd/images/logo.svg" alt="Dentist GE" width="150">
                 </a>
                 <button class="nav-toggle" aria-label="Открыть меню" aria-expanded="false">
                     <span class="hamburger"></span>
